chore(data): refresh examplepatches from repos.txt [skip ci]